<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2" xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="sobot_app_name">智齿sdk</string>
    <string name="sobot_restart_talk">新会话</string>
    <string name="sobot_choice_test">选择咨询内容</string>
    <string name="sobot_clear_history_message">清空聊天记录</string>
    <string name="sobot_btn_cancle">取消</string>
    <string name="sobot_button_send">发送</string>
    <string name="sobot_attach_take_pic">拍照</string>
    <string name="sobot_btn_submit_text">提交评价</string>
    <string name="sobot_move_up_to_cancel">手指上滑，取消发送</string>
    <string name="sobot_release_to_cancel">松开手指，取消发送</string>
    <string name="sobot_up_send_calcel">松开手指 取消发送</string>
    <string name="sobot_upload">图片</string>
    <string name="sobot_cancel">取消</string>
    <string name="sobot_prompt">提示</string>
    <string name="sobot_button_end_now">立即结束</string>
    <string name="sobot_close_session">结束本次对话？</string>
    <string name="sobot_welcome">loading\.\.\.</string>
    <string name="sobot_submit">提交</string>
    <string name="sobot_question">请问 [%1$s] 是否解决了您的问题？</string>
    <string name="sobot_edittext_hint">欢迎给我们的服务提建议~</string>
    <string name="sobot_dcrc">评价客服</string>
    <string name="sobot_str_bottom_message">留言</string>
    <string name="sobot_str_bottom_satisfaction">评价</string>
    <string name="sobot_yes">是</string>
    <string name="sobot_no">否</string>
    <string name="sobot_leavemsg">留言</string>
    <string name="sobot_no_read">以下为未读消息</string>
    <string name="sobot_new_msg">条新消息</string>
    <string name="sobot_press_say">按住 说话</string>
    <string name="sobot_up_send">松开 发送</string>
    <string name="sobot_resendmsg">重新发送</string>
    <string name="sobot_colse">关闭</string>
    <string name="sobot_back">返回</string>
    <string name="sobot_no_record_audio_permission">没有麦克风权限</string>
    <string name="sobot_after_consultation_to_evaluate_custome_service">咨询后才能评价服务质量</string>
    <string name="sobot_problem">存在哪些问题</string>
    <string name="sobot_in_line">排队中，请稍候</string>
    <string name="sobot_in_line_title">排队中...</string>
    <string name="sobot_in_line_position">排队中,您在队伍中的第%1$s个</string>
    <string name="sobot_you_can">您可以</string>
    <string name="sobot_no_more_data">到顶了，没有更多</string>
    <string name="sobot_pic_size_should_be_less_than_three">图片大小需小于3M</string>
    <string name="sobot_service_accept">您好,客服  %1$s  接受了您的请求</string>
    <string name="sobot_no_access">暂无客服在线</string>
    <string name="sobot_unable_transfer_to_customer_service">暂时无法转接人工客服</string>
    <string name="sobot_thank_dialog_hint">谢谢您的反馈＾―＾!</string>
    <string name="sobot_email_dialog_hint">您的邮箱格式错误</string>
    <string name="sobot_phone_dialog_hint">您的手机号码格式错误</string>
    <string name="sobot_leavemsg_success_hint">留言成功!\n我们将尽快联系您</string>
    <string name="sobot_outline_openNewWindows">打开新窗口</string>
    <string name="sobot_voiceTooLong">录音时间过长</string>
    <string name="sobot_str_bottom_offline">离线</string>
    <string name="sobot_voice_can_not_be_less_than_one_second">说话时间过短</string>
    <string name="sobot_count_down">倒计时：</string>
    <string name="sobot_reunicon">点击重新连接</string>
    <string name="sobot_read_all">阅读全文>></string>
    <string name="sobot_ctrl_v_success">复制成功！</string>
    <string name="sobot_ctrl_copy">复制</string>
    <string name="sobot_network_unavailable">当前网络不可用，请检查您的网络设置</string>
    <string name="sobot_save_pic">保存图片</string>
    <string name="sobot_outline_leverByManager">您好,本次会话已结束</string>
    <string name="sobot_current_network">当前网络不可用,请检查网络设置</string>
    <string name="sobot_completed_the_evaluation">您已完成评价</string>
    <string name="sobot_already_save_to_picture">已保存到系统相册</string>
    <string name="sobot_unable_to_evaluate">暂时无法评价</string>
    <string name="sobot_data_wrong_hint">数据错误</string>
    <string name="sobot_server_request_wrong">服务器请求错误！</string>
    <string name="sobot_no_write_external_storage_permission">没有存储权限</string>
    <string name="sobot_did_not_get_picture_path">未获取图片的地址</string>
    <string name="sobot_pic_select_again">请重新选择或拍摄</string>
    <string name="sobot_init_data_is_null">初始化参数不能为空</string>
    <string name="sobot_appkey_is_null">您的AppKey为空</string>
    <string name="sobot_sysnum_is_null">您的Sysnum为空</string>
    <string name="sobot_already_transfer_to_customer_service">您已经转人工</string>
    <string name="sobot_consulting_title">[标题]</string>
    <string name="sobot_consulting_describe">[摘要]</string>
    <string name="sobot_consulting_lable">[标签]</string>
    <string name="sobot_consulting_fromurl">[链接]</string>
    <string name="sobot_post_msg_hint_email">请输入邮箱地址</string>
    <string name="sobot_post_msg_hint_nikename">请输入昵称</string>
    <string name="sobot_post_msg_hint_phone">请输入电话号码</string>
    <string name="sobot_post_msg_hint_enclosure">上传问题图片能大大提高解决问题效率</string>
    <string name="sobot_temporarily_not_evaluation">暂不评价</string>
    <string name="sobot_color_custom_name">#888888</string>
    <string name="sobot_no_camera_permission">没有相机权限</string>
    <string name="sobot_sdcard_does_not_exist">没有sd卡</string>
    <string name="sobot_conntype_unconnected">未连接</string>
    <string name="sobot_conntype_in_connection">连接中...</string>
    <string name="sobot_conntype_connect_success">连接成功</string>
    <string name="sobot_required">（必填）</string>
    <string name="sobot_optional">（选填）</string>
    <string name="sobot_what_are_the_problems">存在以下哪些问题</string>
    <string name="sobot_robot_customer_service_evaluation">机器人客服评价</string>
    <string name="sobot_evaluation_completed_exit">提交评价后会话将结束</string>
    <string name="sobot_delete">删除</string>
    <string name="sobot_choice_form_picture">从手机相册选择</string>
    <string name="sobot_loading">请稍候</string>
    <string name="sobot_robot_like">感谢您的反馈</string>
    <string name="sobot_robot_dislike">很抱歉没能帮到您</string>
    <string name="sobot_evaluate_yes">已解决</string>
    <string name="sobot_evaluate_no">未解决</string>
    <string name="sobot_please_evaluate">请您对 [%1$s] 进行评价</string>
    <string name="sobot_evaluation_decription">您的评价会让我们做得更好</string>
    <string name="sobot_evaluation_finished">您的评价已成功提交</string>
    <string name="sobot_please_evaluate_this_service">请您对本次服务进行评价</string>
    <string name="sobot_the_label_is_required">标签为必选</string>
    <string name="sobot_suggestions_are_required">建议为必填</string>
    <string name="sobot_wait_full">排队已满</string>
    <string name="sobot_consultation_list">消息中心</string>

    <!--六 start-->
    <string name="robot_evaluation">请您对本次服务进行评价</string>
    <!--订单等拼接方式-->
    <string name="splice_type">##</string>
    <string name="order">订单</string>
    <string name="after_order">售后订单</string>
    <string name="xliff_test">your name is <xliff:g id="NAME">%1$50s</xliff:g>, and your age is
    <xliff:g id="AGE">%2$1.2f</xliff:g></string>
    <!--六 end-->

</resources>